# AndroMemDumpBeta

./: .gitignore  README.md
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/zwerks/andromemdumpbeta/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: memdump.cpp  native-lib.cpp
app/src/main/java/com/zwerks/andromemdumpbeta/: ListProcessesActivity.java  MainActivity.java  MemDumper.java  ProcListItem.java  ProcessRecyclerAdapter.java  RootChecker.java  StorageUtils.java  psProcessLister.java
app/src/main/res/layout/: activity_list_processes.xml  activity_main.xml  content_list_processes.xml  content_main.xml  process_filter_box.xml  process_filter_spinner_dropdown_item.xml  process_filter_spinner_item.xml  process_item.xml  process_list_stats.xml  processes_header_line.xml
app/src/main/res/menu/: menu_list_processes.xml  menu_main.xml
app/src/main/res/values/: colors.xml  strings.xml
app/src/test/java/com/zwerks/andromemdumpbeta/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
